# orm

./: LICENSE  README.md  pyproject.toml  requirements.txt
orm/: __init__.py  column.py  datatypes.py  query.py  table.py  utils.py  where_query.py
orm/query/: __init__.py  base.py  column.py  create.py  delete.py  insert.py  select.py  update.py
